--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   "dependencies": {
     "express": "^4.15.4",
     "@connecthing.io/connecthing-api": "~1.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0"
   }
 }
