--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@connecthing.io/connecthing-api": "~1.0.2",
+    "axios": "^0.21.1",
     "express": "^4.15.4",
     "http-proxy": "^1.18.1"
   },
